-Made quility of life improvements for user readablity.
-Cleaned up todo list and added new more importent entrys

-Made a "is owner" checker

--- a/config.json
+++ b/config.json
@@ -69,9 +69,7 @@
    ],
    "bot_owners": [
       {
-         "current": [
-            "Cat Meow Meow#7380"
-         ]
+         "current": "Cat"
       },
       {
          "options": [
