-Changed admin commands to has role Admins instead of Mod.

--- a/utils/default_config.json
+++ b/utils/default_config.json
@@ -27,7 +27,7 @@
    ],
    "game": [
       {
-         "current": "under construction!"
+         "current": "+help"
       },
       {
          "options": [
