added the "repository" entry to the config file to allow the repo command to work properly (whoops)

--- a/utils/default_config.json
+++ b/utils/default_config.json
@@ -76,5 +76,15 @@
             "ANY"
          ]
       }
+   ],
+   "repository": [
+      {
+         "current": "https://github.com/Themis3000/zikuuu.git"
+      },
+      {
+         "options": [
+            "ANY"
+         ]
+      }
    ]
 }
